@@ -1,6 +1,8 @@
 ## 3.1.2
 
 - Improved: Scrollbar is shown in scrollable lists
+- Improved: Better logic on login page for receiving Home Assistant session token (#670)
+- Improved: Logging on login page for Home Assistant connection (#670)
 - Fixed: Home Assistant offline error (#670)
 - Fixed: On login pages all barcode formats were allowed, now only QR code format is recognized
 - Fixed: Deprecated Google Play developer profile link
